--- a/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
+++ b/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
@@ -70,7 +70,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Resources\Images\our-umbraco.png" />
     <EmbeddedResource Include="Resources\Styles\PrevalueEditor.css" />
   </ItemGroup>
   <ItemGroup>
@@ -98,9 +97,7 @@
     <None Include="Resources\MarkEdit\images\wmd-buttons-dark.psd" />
     <None Include="Resources\MarkEdit\images\wmd-buttons.psd" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\Scripts\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
