New option to save HTML output as raw XML.
git-svn-id: https://markdown4umb.svn.codeplex.com/svn@5884 dd3d63e4-b46e-4461-a8c4-23e16edf1824

--- a/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
+++ b/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
@@ -60,6 +60,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TextData.cs" />
     <Compile Include="Extensions\PrevalueEditorExtensions.cs" />
     <Compile Include="Extensions\ResourceExtensions.cs" />
     <Compile Include="Options.cs" />
