--- a/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
+++ b/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
@@ -43,6 +43,9 @@
     <Reference Include="cms">
       <HintPath>..\_externals\cms.dll</HintPath>
     </Reference>
+    <Reference Include="HtmlToMarkdown">
+      <HintPath>..\_externals\HtmlToMarkdown\HtmlToMarkdown.dll</HintPath>
+    </Reference>
     <Reference Include="interfaces">
       <HintPath>..\_externals\interfaces.dll</HintPath>
     </Reference>
@@ -69,6 +72,7 @@
     <Compile Include="DataEditor.cs" />
     <Compile Include="PrevalueEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XsltExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Styles\PrevalueEditor.css" />
