--- a/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
+++ b/Our.Umbraco.DataType.Markdown/Our.Umbraco.DataType.Markdown.csproj
@@ -43,9 +43,6 @@
     <Reference Include="cms">
       <HintPath>..\_externals\cms.dll</HintPath>
     </Reference>
-    <Reference Include="HtmlToMarkdown">
-      <HintPath>..\_externals\HtmlToMarkdown\HtmlToMarkdown.dll</HintPath>
-    </Reference>
     <Reference Include="interfaces">
       <HintPath>..\_externals\interfaces.dll</HintPath>
     </Reference>
@@ -72,7 +69,6 @@
     <Compile Include="DataEditor.cs" />
     <Compile Include="PrevalueEditor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="XsltExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\Styles\PrevalueEditor.css" />
@@ -102,7 +98,12 @@
     <None Include="Resources\MarkEdit\images\wmd-buttons-dark.psd" />
     <None Include="Resources\MarkEdit\images\wmd-buttons.psd" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\Our.Umbraco.DataType.Markdown.Helpers\Our.Umbraco.DataType.Markdown.Helpers.csproj">
+      <Project>{EACD1567-D831-4C99-A3FF-990E1DA3108E}</Project>
+      <Name>Our.Umbraco.DataType.Markdown.Helpers</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
